Lesson 14. Task 31